<package>
  <name>kibot_bringup</name>
  <version>0.0.1</version>

  <description>for kibot test</description>

  <maintainer email="251349552@qq.com">rcwind</maintainer>
  <license>BSD</license>
  <author email="251349552@qq.com">rcwind</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
